--- a/css/style.css
+++ b/css/style.css
@@ -6,27 +6,37 @@ body {
   background: rgb(200, 212, 212);
 }
 
-
 header {
   background: rgb(108, 6, 16)
 }
 
 a {
   color: inherit;
+  transition: all 0.5s ease;
 }
 
 a:hover {
-  background: rgb(250, 113, 126)
+  background: rgb(250, 80, 80)
+}
+
+p {
+  margin:0
+}
+
+.header-main {
+  font-family: 'Space Mono', monospace;
+  text-align: left;
+  font-size: 4.5em;
 }
 
 .header-text {
   display: block;
-  list-style: none;
   text-align: right;
-  font-size: 1.5em;
+  font-size: 2em;
   font-family: 'Space Mono', monospace;
   margin: 0;
   padding: 0;
+  color: rgb(255,255,255)
 }
 
 .body-images {
