--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ header {
   background: rgb(108, 6, 16)
 }
 
+footer {
+  background-color: rgb(108, 6, 16);
+}
+
 a {
   color: inherit;
   transition: all 0.5s ease;
@@ -19,14 +23,19 @@ a:hover {
   background: rgb(250, 80, 80)
 }
 
-p {
-  margin:0
+form {
+  border: solid black 1px;
+  border-width: 1px;
+  max width: 25em;
+  text-align: center;
+  font-family: 'Space Mono', monospace;
 }
 
 .header-main {
   font-family: 'Space Mono', monospace;
   text-align: left;
   font-size: 4.5em;
+  color: rgb(255, 255, 255);
 }
 
 .header-text {
@@ -36,7 +45,14 @@ p {
   font-family: 'Space Mono', monospace;
   margin: 0;
   padding: 0;
-  color: rgb(255,255,255)
+  color: rgb(255, 255, 255)
+}
+
+
+.footer-logos {
+  font-family: 'Space Mono', monospace;
+  list-style: none;
+  color: rgb(255, 255, 255)
 }
 
 .body-images {
@@ -47,7 +63,6 @@ p {
   border-radius: 50%;
   list-style: none;
 }
-
 
 
 /* if the viewport is bigger than 768px */
