--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,22 @@ form {
   padding: 0;
   color: rgb(255, 255, 255)
 }
+.newyork-image {
+  display: block;
+  margin: 0px auto;
+  border-bottom: 5px solid rgb(0, 0, 0);
+}
 
 
 .footer-logos {
   font-family: 'Space Mono', monospace;
   list-style: none;
   color: rgb(255, 255, 255)
+}
+
+.body-text {
+  display: inline;
+  font-family: 'Space Mono', monospace;
 }
 
 .body-images {
