--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ footer {
   background-color: rgb(108, 6, 16);
 }
 
+img {
+  max-width:100%;
+  height: auto;
+}
+
 a {
   color: inherit;
   transition: all 0.5s ease;
@@ -21,14 +26,6 @@ a {
 
 a:hover {
   background: rgb(250, 80, 80)
-}
-
-form {
-  border: solid black 1px;
-  border-width: 1px;
-  max width: 25em;
-  text-align: center;
-  font-family: 'Space Mono', monospace;
 }
 
 .header-main {
@@ -49,10 +46,9 @@ form {
 }
 .newyork-image {
   display: block;
-  margin: 0px auto;
+  margin: auto;
   border-bottom: 5px solid rgb(0, 0, 0);
 }
-
 
 .footer-logos {
   font-family: 'Space Mono', monospace;
@@ -60,25 +56,66 @@ form {
   color: rgb(255, 255, 255)
 }
 
-.body-text {
-  display: inline;
+/* Index page flex box for both index and cv page */
+section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
   font-family: 'Space Mono', monospace;
 }
 
 .body-images {
   list-style: none;
+  border-radius: 50%
 }
 
-.img-circle {
-  border-radius: 50%;
-  list-style: none;
+/* bio page css start */
+.bio-head{
+  font-family: 'Space Mono', monospace;
+  font-size: 1.5em;
 }
 
+.bio-body {
+  font-family: 'Space Mono', monospace;
+  font-size: 1em;
+}
+
+/* contact page css start */
+form {
+  border: solid black 1px;
+  border-width: 1px;
+
+  text-align: center;
+  font-family: 'Space Mono', monospace;
+}
 .contact-text {
   font-family: 'Space Mono', monospace;
   font-size: 2em;
   text-align: center;
 }
 
-
-/* if the viewport is bigger than 768px */
+/* cv page css start */
+.cv-h1 {
+  font-family: 'Space Mono', monospace;
+  font-size: 2em;
+}
+.cv-h2 {
+  font-family: 'Space Mono', monospace;
+  font-size: 1.5em;
+  text-align: left;
+}
+.cv-h3 {
+  font-family: 'Space Mono', monospace;
+  font-size: 1.5em;
+  text-align: center;
+}
+.cv-text {
+  font-family: 'Space Mono', monospace;
+  font-size: 1em;
+}
+.cv-text2 {
+  font-family: 'Space Mono', monospace;
+  font-size: 0.8em;
+  list-style: none;
+}
